--- a/vaccine_effectiveness_analytical_pipeline/scripts/5_descriptives.QMD
+++ b/vaccine_effectiveness_analytical_pipeline/scripts/5_descriptives.QMD
@@ -66,7 +66,7 @@ tryCatch(
     
     ## Matching variables
     df_imputation_methods <- dbGetQuery(con,"SELECT * FROM imputation_methods")
-    v_matching_excl <- as.character(df_imputation_methods[which(df_imputation_methods$imputation_method=="Exclude core variable as matching variable (more than 50% missing values)"),"Variable_name"])
+    v_matching_excl <- as.character(df_imputation_methods[which(df_imputation_methods$imputation_method=="Exclude core variable as matching variable (more than 15% missing values)"),"Variable_name"])
     if("Exclude comorbidities_bl as matching variable (comorbidity)" %in% df_imputation_methods$imputation_method) {
       v_matching_excl <- append(v_matching_excl,"comorbidities_bl")
     }
@@ -550,7 +550,7 @@ tryCatch(
 
 ```
 
-Ratio = $\frac{(\frac{confirmed \ cases}{primary vaccinated \ individuals})} {(\frac{confirmed \ cases}{not-primary vaccinated \ individuals})}$ = `r ratio_start`
+<!-- Ratio = $\frac{(\frac{confirmed \ cases}{primary vaccinated \ individuals})} {(\frac{confirmed \ cases}{not-primary vaccinated \ individuals})}$ = `r ratio_start` -->
 
 ##### Population eligible for matching
 
@@ -591,7 +591,7 @@ tryCatch(
 
 ```
 
-Ratio = $\frac{(\frac{confirmed \ cases}{primary vaccinated \ individuals})} {(\frac{confirmed \ cases}{not-primary vaccinated \ individuals})}$ = `r ratio_elig`
+<!-- Ratio = $\frac{(\frac{confirmed \ cases}{primary vaccinated \ individuals})} {(\frac{confirmed \ cases}{not-primary vaccinated \ individuals})}$ = `r ratio_elig` -->
 
 ##### Matched population
 
@@ -632,7 +632,7 @@ tryCatch(
 
 ```
 
-Ratio = $\frac{(\frac{confirmed \ cases}{primary vaccinated \ individuals})} {(\frac{confirmed \ cases}{not-primary vaccinated \ individuals})}$ = `r ratio_mat`
+<!-- Ratio = $\frac{(\frac{confirmed \ cases}{primary vaccinated \ individuals})} {(\frac{confirmed \ cases}{not-primary vaccinated \ individuals})}$ = `r ratio_mat` -->
 :::
 
 ## Survival in un-matched population {.tabset}
